// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvailableDays /> should re-render after update 1`] = `
<DocumentFragment>
  <div
    class="css-motgx2"
  >
    <div
      aria-pressed="true"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Mon
      </div>
    </div>
    <div
      aria-pressed="true"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Tue
      </div>
    </div>
    <div
      aria-pressed="true"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Wed
      </div>
    </div>
    <div
      aria-pressed="true"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Thu
      </div>
    </div>
    <div
      aria-pressed="true"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Fri
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sat
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sun
      </div>
    </div>
  </div>
  <div
    class="sc-beqWaB gIoxQ"
  >
    <button
      class="sc-gueYoa bTpkmV"
      data-testid="button:update"
      type="button"
    />
  </div>
</DocumentFragment>
`;

exports[`<AvailableDays /> should re-render after update 2`] = `
<DocumentFragment>
  <div
    class="css-motgx2"
  >
    <div
      aria-pressed="true"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Mon
      </div>
    </div>
    <div
      aria-pressed="true"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Tue
      </div>
    </div>
    <div
      aria-pressed="true"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Wed
      </div>
    </div>
    <div
      aria-pressed="true"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Thu
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Fri
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sat
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sun
      </div>
    </div>
  </div>
  <div
    class="sc-beqWaB gIoxQ"
  >
    <button
      class="sc-gueYoa bTpkmV"
      data-testid="button:update"
      type="button"
    />
  </div>
</DocumentFragment>
`;

exports[`<AvailableDays /> should re-render after update 3`] = `
<DocumentFragment>
  <div
    class="css-motgx2"
  >
    <div
      aria-pressed="true"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper-clicked"
      >
        <span
          class="clicked-dot"
        />
        Mon
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Tue
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Wed
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Thu
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Fri
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sat
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sun
      </div>
    </div>
  </div>
  <div
    class="sc-beqWaB gIoxQ"
  >
    <button
      class="sc-gueYoa bTpkmV"
      data-testid="button:update"
      type="button"
    />
  </div>
</DocumentFragment>
`;

exports[`<AvailableDays /> should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-motgx2"
  >
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Mon
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Tue
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Wed
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Thu
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Fri
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sat
      </div>
    </div>
    <div
      aria-pressed="false"
      class="circle-wrapper"
      role="button"
    >
      <div
        class="name-wrapper"
      >
        <span
          class="dot"
        />
        Sun
      </div>
    </div>
  </div>
</DocumentFragment>
`;
